--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,14 +1,14 @@
 COMP	= cc
 NAME	= philo_bonus
 FLAGS	= -Wall -Wextra -Werror
-SRCS	= src/init_data.c src/routine.c src/utils.c 
 INCS	= -I includes
-LIBS	= -lpthread
+SRCS	= src/init_data_bonus.c src/routine_bonus.c src/utils_bonus.c 
+LIBS	= -l pthread
 
 all: $(NAME)
 
-$(NAME): $(SRCS) main.c
-	$(COMP) $(FLAGS) $(INCS) $(SRCS) $(LIBS) main.c -o $(NAME)
+$(NAME): $(SRCS) main_bonus.c
+	$(COMP) $(FLAGS) $(INCS) $(SRCS) $(LIBS) main_bonus.c -o $(NAME)
 
 clean:
 	rm -rf $(NAME)
