--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -3,11 +3,11 @@ NAME	= philo_bonus
 FLAGS	= -Wall -Wextra -Werror
 INCS	= -I includes
 SRCS	= src/init_data_bonus.c src/routine_bonus.c src/utils_bonus.c
-LIBS	= -l pthread
+LIBS	= -lpthread
 
 all: $(NAME)
 
-$(NAME): $(SRCS) main_bonus.c
+$(NAME): $(SRCS) includes/philo_bonus.h main_bonus.c
 	$(COMP) $(FLAGS) $(INCS) $(SRCS) $(LIBS) main_bonus.c -o $(NAME)
 
 clean:
