🍢 FIXING: data races

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,7 +1,7 @@
 COMP	= cc
 NAME	= philo
-FLAGS	= -Wall -Wextra -Werror
-SRCS	= src/init_data.c src/routine.c src/utils.c 
+FLAGS	= -Wall -Wextra -Werror #-fsanitize=thread -g3
+SRCS	= src/init_data.c src/routine.c src/utils.c
 INCS	= -I includes
 LIBS	= -lpthread
 
